--- a/tree_tools/pyproject.toml
+++ b/tree_tools/pyproject.toml
@@ -11,6 +11,10 @@ python = "^3.9"
 click = "^8.1.7"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.11.0"
+pytest = "^7.4.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
